--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "https://localhost:7631"
+      }
+    }
+  },
   "Logging": {
       "LogLevel": {
       "Default": "Information",
