--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,8 @@
 {
   "Kestrel": {
     "Endpoints": {
-      "Https": {
-        "Url": "https://localhost:7631"
+      "Http": {
+        "Url": "http://localhost:7631"
       }
     }
   },
